--- a/src/App.css
+++ b/src/App.css
@@ -9,9 +9,8 @@ thead{background-color: #4BA0B8}
 #edit_car{width: 120px; height: 30px;}
 #edit_car1{width: 150px; height: 30px;}
 #backgr{
-    background-image: url(./Login-template/izivan.jpg);
+    background-image: url(./Layout/img/truck.jpg);
     background-position:center;
     background-size:cover;
   }
 #logo1{width: 300px; height: 60px;}
-
